--- a/Jap762Btp28lyf/parity.html
+++ b/Jap762Btp28lyf/parity.html
@@ -416,8 +416,8 @@
                                             <a class="nav-link" data-bs-toggle="tab" href="#tabItem-m-order" aria-selected="false" tabindex="-1" role="tab" onclick="Myorder(1,10)">My History</a>
                                         </li>
                                         <!--<li class="nav-item" role="presentation" style="margin-left:10px">
-                                            <a class="nav-link " data-bs-toggle="tab" href="#" aria-selected="false" tabindex="-1" role="tab" onclick="Myorder(1,10)">Trend </a>
-</li>-->
+                                                                                    <a class="nav-link " data-bs-toggle="tab" href="#" aria-selected="false" tabindex="-1" role="tab" onclick="Myorder(1,10)">Trend </a>
+                                        </li>-->
                                     </ul>
                                 </div>
                                 <div class="card card-preview w-100 inner-tabs mb-4">
@@ -597,26 +597,49 @@
         <a href="inbox.html"><img src="img/game-index-icons/icon_sevice-chat.png" class="chat-icon-right"></a>
     </div>
     <input type="hidden" id="gamefeededuction" value=""><audio controls="controls" id="sound" class="d-none"><source src="timersound/3min-bell-sound-count-61773.mp3" id="sound" type="audio/mpeg"></audio>
+    <!-- Core scripts without cache busting -->
     <script src="assets/plugins/jquery/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="js/sidebar.js"></script>
-    <script src="js/preloader.js"></script>
-    <script src="assets/plugins/sweetalert/sweetalert.min.js"></script>
-    <script src="Handler_js/Game-LoadCounter.js?ver=2.8"></script>
-    <script src="Handler_js/Inner_Page_Summary.js?ver=2.5"></script>
-    <script src="Handler_js/wingogame.js?ver=2.5"></script>
-    <script type="text/javascript" language="javascript">
-        $(document).ready(function () {
-            Showcounttime();
-        });
 
+    <!-- Dynamically load app scripts with cache busting -->
+    <script>
+        const scriptFiles = [
+            "js/sidebar.js",
+            "js/preloader.js",
+            "assets/plugins/sweetalert/sweetalert.min.js",
+            "Handler_js/Game-LoadCounter.js",
+            "Handler_js/Inner_Page_Summary.js",
+            "Handler_js/wingogame.js"
+        ];
+
+        function loadScriptsSequentially(files, index = 0, callback) {
+            if (index >= files.length) return callback?.();
+
+            const script = document.createElement("script");
+            script.src = `${files[index]}?v=${Date.now()}`;
+            script.onload = () => loadScriptsSequentially(files, index + 1, callback);
+            document.body.appendChild(script);
+        }
+
+        // Start loading scripts, and then call your init code
+        loadScriptsSequentially(scriptFiles, 0, () => {
+            // All scripts loaded, now run app logic
+            $(document).ready(function () {
+                if (typeof Showcounttime === 'function') {
+                    Showcounttime();
+                } else {
+                    console.warn("Showcounttime() not found.");
+                }
+            });
+        });
     </script>
+
     <script>
         function opendetails(orderid) {
             $('#c' + orderid).toggle(1000);
         }
     </script>
-    <script>
+    <!--<script>
         setTimeout(
             function () {
                 function getTimeRemaining(endtime) {
@@ -665,6 +688,6 @@
             },
             3000
         );
-    </script>
+    </script>-->
 </body>
 </html>
